correct error where cancel button was posting form, changed to a tag with href link

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -22,9 +22,9 @@
 				<br>
 				<input type="submit">
 			</form>
-			<form method="post" action="/focus?title={{title}}">
-				<input type="submit" value="Cancel">
-			</form>
+			<div class="cancel">
+				<a style="color: white; text-decoration: none" href="/focus?title={{title}}">Cancel</a>
+			</div>
 		</div>
 	</body>
 	<link type="text/css" rel="stylesheet" href="/static/main.css">
