--- a/templates/edit-title.html
+++ b/templates/edit-title.html
@@ -25,10 +25,9 @@
 				<div style="color: red">{{error}}</div>
 				<input type="submit">
 			</form>
-			<form method="post" action="/focus?title={{old}}">
-				<input type="submit" value="Cancel">
-			</form>
-			
+			<div class="cancel">
+				<a style="color: white; text-decoration: none" href="/focus?title={{title}}">Cancel</a>
+			</div>
 		</div>
 		<br>
 		<br>
