--- a/static/main.css
+++ b/static/main.css
@@ -19,14 +19,33 @@ textarea {
 	border-radius: 5px;
 	border-style: solid;
 	border-color: white;
-	width: 230px;
+	width: 210px;
 	height: 100px;
 	font-size: 18px;
 	background: hsl(210,100%,50%);
 	color: white;
 	text-align: center;
 }
+a {
+	text-decoration: none;
 
+}
+.cancel {
+	text-decoration: none;
+	border-radius: 6px;
+	border-style: solid;
+	border-color: white;
+	width: 230px;
+	height: 30px;
+	font-size: 18px;
+	background: hsl(210,100%,50%);
+	color: white;
+	text-align: center;
+	padding-top: 5px;
+	margin-left: auto;
+	margin-right: auto;
+
+}
 .contain-delete {
 	display: flex;
 	width: 300px;
