eliminated redundant code..put authorization in separate fx

--- a/templates/blogMain.html
+++ b/templates/blogMain.html
@@ -10,9 +10,10 @@
         color: blue;
     }
     </style>
+
     <body>
         <div class="contain-main">
-            <div class="title">The Bike Blog </div>
+            <div class="title">Multi-user Blog </div>
             <br>
             <div class="answer">Welcome back: {{user_id}}</div>
             <br>
