--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
             <div class="title">The Bike Blog</div>
             <div class="answer">Welcome {{user_id}}</div>
             <div class="login-contain">
+            	<div class="error">{{error}}</div>
             	<form class="signup-form" action="/signup">
                     <br>
                     <br>
