--- a/handlers/templates/edit-comment.html
+++ b/handlers/templates/edit-comment.html
@@ -13,20 +13,20 @@
 	</head>
 	<body>
 		<div class="contain-main">
-			<div class="title">Edit body</div>
+			<div class="title">Edit comment</div>
 			<form class="edit-form" method="post">
-				<legend>Current</legend>
-				<input style="text-align: center; color: black" class="textarea1" type="textarea" name="old" value="{{old}}"" readonly>
+				<input readonly style="color: white; background: white" name="commentId" value="{{commentId}}">
+				<legend>Comment:</legend>
+				<input style="text-align: center; color: black" class="textarea1" type="textarea" name="comment" value="{{comment}}"" >
 				<br>
 				<br>
-				<legend>New</legend>
-				<input type="text" class="textarea1" name="body">
-				<br><br>
+				<br>
 				<div style="color: red">{{error}}</div>
-				<input type="submit">
+				<input type="submit" value="submit">
 			</form>
+			<br>
 			<div class="cancel">
-				<a style="color: white; text-decoration: none" href="/focus?title={{title}}">Cancel</a>
+				<a style="color: white; text-decoration: none" href="/focus?postId={{postId}}">Cancel</a>
 			</div>
 		</div>
 		<br>
