--- a/handlers/templates/delete.html
+++ b/handlers/templates/delete.html
@@ -1,62 +1,55 @@
-<!--   template  -->
-<!DOCTYPE html>
-<hmtl>
-	<head>
-	<title>Blog</title>
-	</head>
-	
-	<body>
-		<div class="contain-main">
-			<div class="focus-contain">
-				<div class="title">Delete post</div>
+{% extends "base.html" %}
+{% block content %}
+<div class="contain-main">
+	<div class="focus-contain">
+		<div class="title">Delete post</div>
+		<br>
+		<form method="post">
+			<input type="submit" value="delete now" class="delete-post">
+		</form>
+		<br>
+		<div class="cancel">
+		<a style="color: white; text-decoration: none" href="/focus?postId={{postId}}">Cancel</a>
+		</div>
+		<div class="contain-body">
+			<div class="field">Title:
 				<br>
-				<form method="post">
-					<input type="submit" value="delete now" class="delete-post">
-				</form>
+				<span class="answer">  {{title}}</span>
+			</div>
+			<div class="error">{{error}}</div>
+			<div class="field">Created:
 				<br>
-				<div class="cancel">
-				<a style="color: white; text-decoration: none" href="/focus?postId={{postId}}">Cancel</a>
-				</div>
-				<div class="contain-body">
-					<div class="field">Title:
-						<br>
-						<span class="answer">  {{title}}</span>
-					</div>
-					<div class="error">{{error}}</div>
-					<div class="field">Created:
-						<br>
-						<span class="answer">  {{created}}</span>
-					</div>
-					<div class="field">Last mod:
-						<br>
-						<span class="answer">  {{last_mod}}</span>
-					</div>
-					<div class="field">Author:
-						<br>
-						<span class="answer">  {{author}}</span>
-					</div>
-					<div class="field">Content:
-						
-						<br>
-						<span class="answer">{{body}}</span>
-					</div>
-					<div class="error">{{error}}</div>
-				</div>
+				<span class="answer">  {{created}}</span>
+			</div>
+			<div class="field">Last mod:
 				<br>
+				<span class="answer">  {{last_mod}}</span>
+			</div>
+			<div class="field">Author:
 				<br>
-				<div class="contain-body">
-					<div>Comments:<div/>
-						<ul>
-							{% for x in comments %}
-							<li>
-								<div class="comment1"><i>{{ x.author }}</i> commented on {{ x.created }}:</div>
-								<br>
-								<div class="comment2">{{ x.comment }}</div>
-								<br>
-								<br>
-							</li>
-							{% endfor %}
-						</ul>
-				</div>
-		</body>
-	<link type="text/css" rel="stylesheet" href="/static/main.css"/>
+				<span class="answer">  {{author}}</span>
+			</div>
+			<div class="field">Content:
+				
+				<br>
+				<span class="answer">{{body}}</span>
+			</div>
+			<div class="error">{{error}}</div>
+		</div>
+		<br>
+		<br>
+		<div class="contain-body">
+			<div>Comments:<div/>
+				<ul>
+					{% for x in comments %}
+					<li>
+						<div class="comment1"><i>{{ x.author }}</i> commented on {{ x.created }}:</div>
+						<br>
+						<div class="comment2">{{ x.comment }}</div>
+						<br>
+						<br>
+					</li>
+					{% endfor %}
+				</ul>
+		</div>
+{% endblock %}
