--- a/handlers/templates/focus.html
+++ b/handlers/templates/focus.html
@@ -1,56 +1,49 @@
-<!--   template  -->
-<!DOCTYPE html>
-<hmtl>
-
-    <head>
-        <title>Blog</title>
-    </head>
-    <body>
-        <div class="contain-main">
-            <div class="title">Title: {{title}}</div>
-            <div class="error">{{error}}</div>
-            <div class="contain-delete">
-            	<div class="contain-menu">
-                    <a class="delete" href="/welcome">Main</a>
-                </div>
-                <form method="post" action="/focus?postId={{postId}}">
-                    <input style="border-radius: 0px" class="like" type="submit" name="like" value="Likes  {{count}}">
-                </form>
-                <div class="contain-menu">
-                    <a class="delete" href="/delete?postId={{postId}}">Delete</a>
-                </div>
-                <div class="contain-menu">
-                    <a class="delete" href="/editpost?postId={{postId}}">Edit</a>
-                </div>
-            </div>
-            <div class="contain-body">
-                <div class="field">Title:
-                    <br><span class="answer">  {{title}}</span></div>
-                <div class="field">Created:
-                    <br><span class="answer">  {{created}}</span></div>
-                <div class="field">Last mod:
-                    <br><span class="answer">  {{last_mod}}</span></div>
-                <div class="field">Author:
-                    <br><span class="answer">  {{author}}</span></div>
-                <div class="field">Content:  
-                    <br><span class="answer">{{body}}</span></div>
-            </div>
-            <br>
-            <br>
-            <div class="contain-body comment-box"><a href="/comment?postId={{postId}}">+ Comments:<a/>
-				<ul>
-					{% for x in comments %}
-					<li>
-					<div class="comment1"><i>{{ x.author }}</i> commented on {{ x.created }}:</div>
-					<br>
-					<a href="/editcomment?commentId={{x.key().id()}}&postId={{postId}}" class="edit-comment">edit</a>
-					<div class="comment2">{{ x.comment }}</div>
-					<br>
-					<br>
-					</li>
-					{% endfor %}
-				</ul>
-			</div>
-		</div>
-	</body>
-	<link type="text/css" rel="stylesheet" href="/static/main.css"/>
+{% extends "base.html" %}
+{% block content %}
+<div class="contain-main">
+    <div class="title">Title: {{title}}</div>
+    <div class="error">{{error}}</div>
+    <div class="contain-delete">
+    	<div class="contain-menu">
+            <a class="delete" href="/welcome">Main</a>
+        </div>
+        <form method="post" action="/focus?postId={{postId}}">
+            <input style="border-radius: 0px" class="like" type="submit" name="like" value="Likes  {{count}}">
+        </form>
+        <div class="contain-menu">
+            <a class="delete" href="/delete?postId={{postId}}">Delete</a>
+        </div>
+        <div class="contain-menu">
+            <a class="delete" href="/editpost?postId={{postId}}">Edit</a>
+        </div>
+    </div>
+    <div class="contain-body">
+        <div class="field">Title:
+            <br><span class="answer">  {{title}}</span></div>
+        <div class="field">Created:
+            <br><span class="answer">  {{created}}</span></div>
+        <div class="field">Last mod:
+            <br><span class="answer">  {{last_mod}}</span></div>
+        <div class="field">Author:
+            <br><span class="answer">  {{author}}</span></div>
+        <div class="field">Content:  
+            <br><span class="answer">{{body}}</span></div>
+    </div>
+    <br>
+    <br>
+    <div class="contain-body comment-box"><a href="/comment?postId={{postId}}">+ Comments:<a/>
+		<ul>
+			{% for x in comments %}
+			<li>
+			<div class="comment1"><i>{{ x.author_name }}</i> commented on {{ x.created }}:</div>
+			<br>
+			<a href="/editcomment?commentId={{x.key().id()}}&postId={{postId}}" class="edit-comment">edit</a>
+			<div class="comment2">{{ x.comment }}</div>
+			<br>
+			<br>
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
+</div>
+{% endblock %}
