--- a/handlers/templates/newpost.html
+++ b/handlers/templates/newpost.html
@@ -1,38 +1,25 @@
-<!--   template  -->
-<!DOCTYPE html>
-<hmtl>
-
-    <head>
-        <title>Blog</title>
-    </head>
-    <style>
-    a:visited {
-        color: blue;
-    }
-    </style>
-
-    <body>
-        <div class="contain-main">
-            <div class="title">Add blog post</div>
+{% extends "base.html" %}
+{% block content %}
+<div class="contain-main">
+    <div class="title">Add blog post</div>
+    <br>
+    <br>
+    <div class="login-contain">
+        <div class="error">{{error}}</div>
+        <form method="post">
             <br>
-            <br>
-            <div class="login-contain">
-                <div class="error">{{error}}</div>
-                <form method="post">
-                    <br>
-                    <legend>Title/summary</legend>
-                    <input type="text" name="title" value="{{title}}" " class="input1 ">
-					<br>
-					<br>
-					<legend>Body</legend>
-					<textarea type="text" name="body" class="textarea1">{{body}}</textarea>
-					<br>
-					<input type="submit" value="submit" class="AddBlogButton">
-				</form>
-				<br>
-				<div class="cancel">
-				<a style="color: white; text-decoration: none" href="/welcome">Cancel</a>
-			</div>
-			</div>
-	</body>
-	<link type="text/css" rel="stylesheet" href="/static/main.css"/>
+            <legend>Title/summary</legend>
+            <input type="text" name="title" value="{{title}}" " class="input1 ">
+			<br>
+			<br>
+			<legend>Body</legend>
+			<textarea type="text" name="body" class="textarea1">{{body}}</textarea>
+			<br>
+			<input type="submit" value="submit" class="AddBlogButton">
+		</form>
+		<br>
+		<div class="cancel">
+		<a style="color: white; text-decoration: none" href="/welcome">cancel</a>
+	</div>
+	</div>
+{% endblock %}
