--- a/handlers/templates/blogMain.html
+++ b/handlers/templates/blogMain.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <form method="post" action="/logout">
     <input type=submit value="logout">
 </form>
