--- a/handlers/templates/focus.html
+++ b/handlers/templates/focus.html
@@ -1,10 +1,9 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="contain-main">
     <div class="title">Title: {{title}}</div>
     <div class="error">{{error}}</div>
     <div class="contain-delete">
-    	<div class="contain-menu">
+        <div class="contain-menu">
             <a class="delete" href="/welcome">Main</a>
         </div>
         <form method="post" action="/focus?postId={{postId}}">
@@ -26,24 +25,31 @@
             <br><span class="answer">  {{last_mod}}</span></div>
         <div class="field">Author:
             <br><span class="answer">  {{author}}</span></div>
-        <div class="field">Content:  
+        <div class="field">Content:
             <br><span class="answer">{{body}}</span></div>
     </div>
     <br>
     <br>
     <div class="contain-body comment-box"><a href="/comment?postId={{postId}}">+ Comments:<a/>
-		<ul>
-			{% for x in comments %}
-			<li>
-			<div class="comment1"><i>{{ x.author_name }}</i> commented on {{ x.created }}:</div>
-			<br>
-			<a href="/editcomment?commentId={{x.key().id()}}&postId={{postId}}" class="edit-comment">edit</a>
-			<div class="comment2">{{ x.comment }}</div>
-			<br>
-			<br>
-			</li>
-			{% endfor %}
-		</ul>
-	</div>
+        <ul>
+            {% for x in comments %}
+            <li>
+            <div class="comment1"><i>{{ x.author_name }}</i> commented on {{ x.created }}:</div>
+            <br>
+            <div class="comment2">{{ x.comment }}</div>
+            <br>
+            <div class="ed-contain">
+                <div class="edit-delete">
+                    <a class="ed-but" href="/editcomment?commentId={{x.key().id()}}&postId={{postId}}" class="edit-comment">edit</a>
+    </div>
+    <div class="edit-delete">
+        <a class="ed-but" href="/deletecomment?commentId={{x.key().id()}}&postId={{postId}}" class="edit-comment">delete</a>
+    </div>
+</div>
+<br>
+</li>
+{% endfor %}
+</ul>
+</div>
 </div>
 {% endblock %}
