--- a/handlers/templates/deletecomment.html
+++ b/handlers/templates/deletecomment.html
@@ -41,7 +41,7 @@
                 <div/>
                 <br>
                 <div>Author:
-                    <div class="answer"> {{cauthor_name}}</div>
+                    <div class="answer"> {{cauthor}}</div>
                 </div>
                 <div>Created:
                     <div class="answer"> {{ccreated}}</div>
@@ -50,4 +50,4 @@
                     <div class="answer"> {{cbody}}</div>
                 </div>
             </div>
-            {% endblock %}
+{% endblock %}
