--- a/handlers/templates/edit-comment.html
+++ b/handlers/templates/edit-comment.html
@@ -16,5 +16,4 @@
         <a style="color: white; text-decoration: none" href="/focus?postId={{postId}}">Cancel</a>
     </div>
 </div>
-<br>
-<br> {% endblock %}
+{% endblock %}
